WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144944
In Safari, Debug > Get Bytecode Profile crashes the Web Content process
https://bugs.webkit.org/show_bug.cgi?id=144944
Summary
In Safari, Debug > Get Bytecode Profile crashes the Web Content process
mitz
Reported
2015-05-12 21:33:49 PDT
<
rdar://problem/17414349
> To reproduce: enable Safari’s internal Debug menu and choose Debug > Get Bytecode Profile. The Web Content process crashes in Profiler::Database::toJSON().
Attachments
Fix a null pointer dereference
(1.67 KB, patch)
2015-05-12 21:36 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2015-05-12 21:36:44 PDT
Created
attachment 253017
[details]
Fix a null pointer dereference
mitz
Comment 2
2015-05-12 21:40:34 PDT
Fixed in <
http://trac.webkit.org/r184258
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug