In Safari, Debug > Get Bytecode Profile crashes the Web Content process https://bugs.webkit.org/show_bug.cgi?id=144944

Reviewed by Darin Adler.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::getBytecodeProfile): Don’t assert that m_perBytecodeProfiler isn’t null,
because it is when the profiler is disabled, which is the default. In that case, return
after sending back the empty string, rather than continuing to dereference a null pointer.



Canonical link: https://commits.webkit.org/162988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184258 268f45cc-cd09-0410-ab3c-d52691b4dbfc